--- a/force-app/main/default/classes/StudyTrialService.cls
+++ b/force-app/main/default/classes/StudyTrialService.cls
@@ -167,17 +167,16 @@ public without sharing class StudyTrialService {
         Location userLocation = DistanceHelper.getUserLocation();
         Contact userContact = CommunityService.getUserContact();
         String userCountry;
-        if(userContact.MailingCountry != null && userContact.MailingCountry!=''){
+        if (userContact.MailingCountry != null && userContact.MailingCountry != '') {
             userCountry = userContact.MailingCountry;
-        }
-        else{
-            userCountry='United States';
+        } else {
+            userCountry = 'United States';
         }
         String query = 'SELECT ' + String.join(transformToStudySiteFields(TRIAL_FIELDS), ', ') + ', Name, Principal_Investigator__r.Account.BillingLatitude, Principal_Investigator__r.Account.BillingLongitude, Principal_Investigator__r.Account.BillingGeocodeAccuracy, Site__c, Study_Site_Type__c FROM Study_Site__c WHERE ';
-        query += '(Clinical_Trial_Profile__r.Override_Recruitment_Status__c = \'' + ACTIVELY_ENROLLING_STATUS + '\' AND Clinical_Trial_Profile__r.Participating_in_Rocket_Referral__c = \'Yes\''+
+        query += '(Clinical_Trial_Profile__r.Override_Recruitment_Status__c = \'' + ACTIVELY_ENROLLING_STATUS + '\' AND Clinical_Trial_Profile__r.Participating_in_Rocket_Referral__c = \'Yes\'' +
                 '  AND Override_PI_Referral_Status__c != NULL ' +
-                '  AND Override_PI_Referral_Status__c IN (\'' + String.join(StudySiteService.STATUS_GROUP_ACCEPTED, '\',\'') + '\')'+
-                '  AND Principal_Investigator__r.Account.BillingCountry = :userCountry '+
+                '  AND Override_PI_Referral_Status__c IN (\'' + String.join(StudySiteService.STATUS_GROUP_ACCEPTED, '\',\'') + '\')' +
+                '  AND Principal_Investigator__r.Account.BillingCountry = :userCountry ' +
                 ') ';
 
         if (sortData.sortType == 'CreatedDate DESC') {
@@ -205,10 +204,9 @@ public without sharing class StudyTrialService {
         for (Id currTrialId : trialIdToStudySites.keySet()) {
             Double minDistance;
             for (Study_Site__c currStudySite : trialIdToStudySites.get(currTrialId)) {
-                if(currStudySite.Study_Site_Type__c == StudySiteService.SS_TYPE_VIRTUAL){
+                if (currStudySite.Study_Site_Type__c == StudySiteService.SS_TYPE_VIRTUAL) {
                     trialsWithVirtualSites.add(currTrialId);
-                }
-                else{
+                } else {
                     Double currDistance = DistanceHelper.calculateDistanceTo(currStudySite.Principal_Investigator__r.Account);
                     if (currDistance != null) {
                         if (minDistance == null) {
@@ -223,14 +221,13 @@ public without sharing class StudyTrialService {
                 trialIdToDistance.put(currTrialId, minDistance);
             }
         }
-        if (sortData.sortType == 'Distance ASC'){
+        if (sortData.sortType == 'Distance ASC') {
             List<Clinical_Trial_Profile__c> tempStudies = new List<Clinical_Trial_Profile__c>();
             List<Clinical_Trial_Profile__c> tempStudiesWithVirtual = new List<Clinical_Trial_Profile__c>();
-            for(Clinical_Trial_Profile__c study : trials){
-                if(trialsWithVirtualSites.contains(study.Id)){
+            for (Clinical_Trial_Profile__c study : trials) {
+                if (trialsWithVirtualSites.contains(study.Id)) {
                     tempStudiesWithVirtual.add(study);
-                }
-                else{
+                } else {
                     tempStudies.add(study);
                 }
             }
@@ -261,7 +258,7 @@ public without sharing class StudyTrialService {
             }
 
             Double distance = trialIdToDistance.get(currTrial.Id);
-            if (currMaxDistance != null && (distance == null || distance > currMaxDistance)&& !trialsWithVirtualSites.contains(currTrial.Id)) {
+            if (currMaxDistance != null && (distance == null || distance > currMaxDistance) && !trialsWithVirtualSites.contains(currTrial.Id)) {
                 isMatchDistance = false;
             }
 
@@ -288,7 +285,7 @@ public without sharing class StudyTrialService {
         List<StudyDetailItem> pageRecords = new List<StudyDetailItem>();
 
         for (Clinical_Trial_Profile__c trial : trialsOnPage) {
-            StudyActions.Action openStudySite = new StudyActionsHCP(trial,null,null).actions.get(StudyActions.ACT_HCP_LINK_STUDY_SITES);
+            StudyActions.Action openStudySite = new StudyActionsHCP(trial, null, null).actions.get(StudyActions.ACT_HCP_LINK_STUDY_SITES);
             StudyDetailItem studyDetailItem = new StudyDetailItem();
             studyDetailItem.trial = trial;
             studyDetailItem.studyActions = new List<StudyActions.Action>{
@@ -309,7 +306,8 @@ public without sharing class StudyTrialService {
     private static Map<Id, List<HCP_Enrollment__c>> getTrialIdToEnrollments() {
         String contactId = CommunityService.getUserContact().Id;
         List<HCP_Enrollment__c> relatedEnrollments = [
-                SELECT Id, Clinical_Trial_Profile__c
+                SELECT Id,
+                        Clinical_Trial_Profile__c
                 FROM HCP_Enrollment__c
                 WHERE HCP_Contact__c = :contactId
                 AND Clinical_Trial_Profile__c != NULL
@@ -351,7 +349,7 @@ public without sharing class StudyTrialService {
         }
         String delegatesFilter = '';
         List<Id> delegatedHCPEIds = DelegateService.getDelegatedHCPEnrollmentIds();
-        if(delegatedHCPEIds.size() > 0) delegatesFilter = '   OR HCP__c IN (\'' + String.join(delegatedHCPEIds, '\',\'') + '\')';
+        if (delegatedHCPEIds.size() > 0) delegatesFilter = '   OR HCP__c IN (\'' + String.join(delegatedHCPEIds, '\',\'') + '\')';
         String query = 'SELECT Id, Clinical_Trial_Profile__c FROM Participant_Enrollment__c WHERE Clinical_Trial_Profile__c IN :trialIds AND ' + '(' +
                 '   HCP__r.HCP_Contact__c = \'' + CommunityService.getUserContact().Id + '\'' +
                 delegatesFilter +
@@ -369,8 +367,8 @@ public without sharing class StudyTrialService {
             studyDetailItem.maxHCPCreatedDate = getMaxHCPCreatedDate(trialStudyMap.get(trial.Id));
             studyDetailItem.trial = trial;
             studyDetailItem.site = studyDetailItem.sites[0];
-            for(StudySiteService.StudySiteDistanceWrapper siteWrapper:studyDetailItem.sites){
-                if(siteWrapper.hcpe.Status__c != HCPEnrollmentService.HCP_S_INVITATION_SENT && siteWrapper.siteType != StudySiteService.SS_TYPE_VIRTUAL){
+            for (StudySiteService.StudySiteDistanceWrapper siteWrapper : studyDetailItem.sites) {
+                if (siteWrapper.hcpe.Status__c != HCPEnrollmentService.HCP_S_INVITATION_SENT && siteWrapper.siteType != StudySiteService.SS_TYPE_VIRTUAL) {
                     studyDetailItem.distance = siteWrapper.formatedDistance;
                     break;
                 }
@@ -379,6 +377,11 @@ public without sharing class StudyTrialService {
             studyDetailItem.therapeuticArea = trial.Therapeutic_Area__r.Name;
             studyDetailItem.hasActiveHCPEnrollments = trialsWithActiveEnrollments.contains(trial.Id);
             studyDetailItem.hasPatients = trialsWithPatients.contains(trial.Id);
+            if (trialsWithPatients.contains(trial.Id)) {
+                for (Integer i = 0, j = studyDetailItem.sites.size(); i < j; i++) {
+                    studyDetailItem.sites[i].hasPatients = true;
+                }
+            }
             List<StudyActions.Action> availableActions = new List<StudyActions.Action>();
             for (StudySiteService.StudySiteDistanceWrapper siteWrapper : studyDetailItem.sites) {
                 StudyActionsHCP currSA = new StudyActionsHCP(siteWrapper.hcpe);
@@ -392,9 +395,9 @@ public without sharing class StudyTrialService {
                     StudyActions.Action myPatients = currSA.actions.get(StudyActions.ACT_MY_PATIENTS);//new StudyActions.Action(StudyActions.ACT_MY_PATIENTS, StudyActions.LABEL_MY_PATIENTS, 'referrals', false);
                     currActions.add(myPatients);
                 }
-                if(studyDetailItem.trial.Terms_And_Conditions_ID__c != null){
-                	StudyActions.Action tcAction = currSA.actions.get(StudyActions.ACT_VIEW_TC);
-					currActions.add(tcAction);
+                if (studyDetailItem.trial.Terms_And_Conditions_ID__c != null) {
+                    StudyActions.Action tcAction = currSA.actions.get(StudyActions.ACT_VIEW_TC);
+                    currActions.add(tcAction);
                 }
                 availableActions.addAll(currActions);
             }
@@ -449,20 +452,34 @@ public without sharing class StudyTrialService {
     public static List<Clinical_Trial_Profile__c> getTrials(Set<Id> trialsId) {
         return [
                 SELECT Id
-                        , Name
-                        , Study_Sponsor__c
-                        , Detailed_Description__c
-                        , Brief_Summary__c
-                        , Override_Recruitment_Status__c
-                        , Terms_And_Conditions_ID__c
-                        , Link_to_Medical_Record_Review__c
-                        , Link_to_Pre_screening__c
-                        , Study_Title__c
-                        , Study_Code_Name__c
-                        , Official_Title__c
-                        , Sponsor_Pays_for_Referral_Activity__c
-                        , NCT_Number__c
-                        ,Share_URL__c
+                        ,
+                        Name
+                        ,
+                        Study_Sponsor__c
+                        ,
+                        Detailed_Description__c
+                        ,
+                        Brief_Summary__c
+                        ,
+                        Override_Recruitment_Status__c
+                        ,
+                        Terms_And_Conditions_ID__c
+                        ,
+                        Link_to_Medical_Record_Review__c
+                        ,
+                        Link_to_Pre_screening__c
+                        ,
+                        Study_Title__c
+                        ,
+                        Study_Code_Name__c
+                        ,
+                        Official_Title__c
+                        ,
+                        Sponsor_Pays_for_Referral_Activity__c
+                        ,
+                        NCT_Number__c
+                        ,
+                        Share_URL__c
 
                 FROM Clinical_Trial_Profile__c
                 WHERE Id IN :trialsId
@@ -480,10 +497,8 @@ public without sharing class StudyTrialService {
         if (String.isNotBlank(selectedOption)) {
             options.add(selectedOption);
         }
-
         List<String> sortedOptions = new List<String>(options);
         sortedOptions.sort();
-
         therapeuticAreaFilterOptions = new List<LabelValueItem>();
         therapeuticAreaFilterOptions.add(new LabelValueItem(Label.PG_SFS_L_All_Therapeutic_Areas, null));
         for (String currOption : sortedOptions) {
@@ -540,30 +555,54 @@ public without sharing class StudyTrialService {
     public static List<Clinical_Trial_Profile__c> getFullTrials(Set<Id> trialsId) {
         return [
                 SELECT Id
-                        , Orientation_Required__c
-                        , Name
-                        , Terms_And_Conditions_ID__c
-                        , Study_Sponsor__c
-                        , Study_Type__c
-                        , Detailed_Description__c
-                        , Override_Recruitment_Status__c
-                        , Brief_Summary__c
-                        , Override_Description__c
-                        , Override_Inclusion_Criteria__c
-                        , Override_Exclusion_Criteria__c
-                        , Condition_s_Therapeutic_Area__c
-                        , Sponsor_Pays_for_Referral_Activity__c
-                        , Study_Phase__c
-                        , NCT_Number__c
-                        , Protocol_ID__c
-                        , Enrollment_Start_Date__c
-                        , Enrolled_End_Date__c
-                        , Link_to_Medical_Record_Review__c
-                        , Link_to_Pre_screening__c
-                        , Study_Title__c
-                        , Study_Code_Name__c
-                        , Official_Title__c
-                        , Interventions__c
+                        ,
+                        Orientation_Required__c
+                        ,
+                        Name
+                        ,
+                        Terms_And_Conditions_ID__c
+                        ,
+                        Study_Sponsor__c
+                        ,
+                        Study_Type__c
+                        ,
+                        Detailed_Description__c
+                        ,
+                        Override_Recruitment_Status__c
+                        ,
+                        Brief_Summary__c
+                        ,
+                        Override_Description__c
+                        ,
+                        Override_Inclusion_Criteria__c
+                        ,
+                        Override_Exclusion_Criteria__c
+                        ,
+                        Condition_s_Therapeutic_Area__c
+                        ,
+                        Sponsor_Pays_for_Referral_Activity__c
+                        ,
+                        Study_Phase__c
+                        ,
+                        NCT_Number__c
+                        ,
+                        Protocol_ID__c
+                        ,
+                        Enrollment_Start_Date__c
+                        ,
+                        Enrolled_End_Date__c
+                        ,
+                        Link_to_Medical_Record_Review__c
+                        ,
+                        Link_to_Pre_screening__c
+                        ,
+                        Study_Title__c
+                        ,
+                        Study_Code_Name__c
+                        ,
+                        Official_Title__c
+                        ,
+                        Interventions__c
                 FROM Clinical_Trial_Profile__c
                 WHERE Id IN :trialsId
         ];
@@ -575,189 +614,5 @@ public without sharing class StudyTrialService {
         });
         if (trials.size() > 0) return trials[0];
         return null;
-    }
-
-    public static List<Account> getAccounts(List<StudyDetailItem> studies) {
-        try {
-            Map<Id,Account> accountMap = new Map<Id,Account>();
-            for (AccountContactRelation piAccounts : [SELECT Id,
-                                                             Contact.Id,
-                                                             Contact.Name,
-                                                             Contact.primaryContact__c,
-                                                             Account.Id,
-                                                             Account.Name,
-                                                             Account.ParentId,
-                                                             Account.BillingCountry,
-                                                             Account.BillingCity,
-                                                             Account.BillingStreet,
-                                                             Account.BillingPostalCode,
-                                                             Account.BillingState,
-                                                             Account.BillingStateCode,
-                                                             Account.BillingLatitude,
-                                                             Account.BillingLongitude,
-                                                             Account.BillingGeocodeAccuracy,
-                                                             Account.Driving_Directions__c,
-                                                             Account.Parking_Instructions__c
-                                                             FROM AccountContactRelation
-                                                             WHERE ContactId = : CommunityService.getInstance().getCurrentContactId()]) {
-                accountMap.put(piAccounts.Account.Id,piAccounts.Account);
-            }
-                    for(StudyDetailItem sdi : studies){
-                        for(StudyDetailItem.StudySiteWithActions ss : sdi.ssList) {
-                            if(!ss.studySite.Account_Was_Changed__c) {
-                                accountMap.put(ss.studySite.Site__r.Id,ss.studySite.Site__r);
-                            }
-                        }
-                    }
-            List<Account> accountsToReturn = accountMap.values();
-
-            //accountsToReturn.sort();
-            return accountsToReturn;
-        } catch (Exception ex) {
-            return null;
-        }
-    }
-
-    private static String checkIfNull(String value){
-        if(value==null){
-            return '';
-        } else{
-            return value;
-        }
-    }
-
-    public static List<LabelValueItem> getDelegatePicklistValues(Id piId) {
-        try {
-            Map<Id, LabelValueItem> delegates = new Map<Id, LabelValueItem>();
-            List<Site_Staff__c> piDelegates = new List<Site_Staff__c>();
-            piDelegates = [
-                    SELECT Id,
-                            Site_Contact__r.Name,
-                            Site_Contact__c
-                    FROM Site_Staff__c
-                    WHERE Study_Site__r.Principal_Investigator__c = :piId
-            ];
-           /* if (piDelegates.isEmpty()) {
-                Set<Id> piSet = new Set<Id>();
-                for (Site_Staff__c delegatesSites : [
-                        SELECT Id,
-                                Study_Site__r.Principal_Investigator__c,
-                                Site_Contact__r.Name,
-                                Site_Contact__c
-                        FROM Site_Staff__c
-                        WHERE Site_Contact__c = :CommunityService.getInstance().getCurrentContactId()
-                ]) {
-                    piSet.add(delegatesSites.Study_Site__r.Principal_Investigator__c);
-                }
-                if (!piSet.isEmpty()) {
-                    piDelegates = [
-                            SELECT Id,
-                                    Site_Contact__r.Name,
-                                    Site_Contact__c
-                            FROM Site_Staff__c
-                            WHERE Study_Site__r.Principal_Investigator__c IN :piSet
-                    ];
-                }
-            }*/
-            if (!piDelegates.isEmpty()) {
-                for (Site_Staff__c delegatesSites : piDelegates) {
-                    delegates.put(delegatesSites.Site_Contact__c, new LabelValueItem(delegatesSites.Site_Contact__r.Name, delegatesSites.Id));
-                }
-            }
-            List<LabelValueItem> labelList = new List<LabelValueItem>();
-            if (!delegates.isEmpty()) {
-                labelList.add(new LabelValueItem('None', ' '));
-                labelList.addAll(delegates.values());
-            }
-            return labelList;
-        } catch (Exception ex) {
-            return null;
-        }
-    }
-
-    public static void saveSSChanges(String studySiteInfo) {
-        try {
-            Study_Site__c ss = (Study_Site__c) JSON.deserialize(studySiteInfo, Study_Site__c.class);
-            Study_Site__c ssToUpdate = [
-                    SELECT Id,
-                            Site_Staff__c,
-                            Study_Site_Email__c,
-                            Study_Site_Phone__c,
-                            Site__c
-                    FROM Study_Site__c
-                    WHERE Id = :ss.Id
-                    LIMIT 1
-            ];
-            ssToUpdate.Study_Site_Phone__c = ss.Study_Site_Phone__c;
-            ssToUpdate.Study_Site_Email__c = ss.Study_Site_Email__c;
-            ssToUpdate.Site_Staff__c = ss.Site_Staff__c;
-            ssToUpdate.Name = ss.Name;
-            ssToUpdate.Site__c = ss.Site__c;
-            update ssToUpdate;
-        } catch (Exception e) {
-            String status = (String) AuraHelper.throwException(e);
-        }
-    }
-
-    public static void saveSSAddress(String studySiteInfo) {
-        try {
-            Study_Site__c ss = (Study_Site__c) JSON.deserialize(studySiteInfo, Study_Site__c.class);
-            Contact currentContact = [SELECT Id, OwnerId, AccountId FROM Contact WHERE Id = :ss.Principal_Investigator__c];
-            Map<String, Object> acc = (Map<String, Object>) JSON.deserializeUntyped(studySiteInfo);
-            String accString = JSON.serialize(acc.get('Site__r'));
-            Account newAccount = (Account) JSON.deserialize(accString, Account.class);
-            Account createAccount = new Account();
-            if (newAccount.Id == null) {
-                createAccount = setFields(newAccount,currentContact,false);
-                insert createAccount;
-                currentContact.AccountId = createAccount.Id;
-                update currentContact;
-            } else {
-                if (newAccount.ParentId == null) {
-                    newAccount.ParentId = newAccount.Id;
-                    createAccount = setFields(newAccount,currentContact,false);
-                    insert createAccount;
-                    List<AccountContactRelation> removeAccContRelation = [
-                            SELECT Id,
-                                    IsDirect
-                            FROM AccountContactRelation
-                            WHERE AccountId = :newAccount.Id AND ContactId = :currentContact.Id
-                            LIMIT 1
-                    ];
-                    currentContact.AccountId = createAccount.Id;
-                    update currentContact;
-                    if (!removeAccContRelation.isEmpty()) {
-                        delete removeAccContRelation[0];
-                    }
-                } else {
-                    createAccount = setFields(newAccount,currentContact,true);
-                    update createAccount;
-                    if (currentContact.AccountId != createAccount.Id) {
-                        currentContact.AccountId = createAccount.Id;
-                        update currentContact;
-                    }
-                }
-            }
-            Study_Site__c updSS = new Study_Site__c(Id = ss.Id, Account_Was_Changed__c = true, Site__c = createAccount.Id);
-            update updSS;
-        } catch (Exception e) {
-            String status = (String) AuraHelper.throwException(e);
-        }
-    }
-
-    private static Account setFields(Account newAccount,Contact currentContact,Boolean setId){
-        System.debug('newAccount>>'+newAccount);
-        Account acc =  new Account(  Id = setId ? newAccount.Id : null,
-                Name = newAccount.Name,
-                ParentId = newAccount.ParentId,
-                BillingCountry = newAccount.BillingCountry,
-                BillingStreet = newAccount.BillingStreet,
-                BillingCity = newAccount.BillingCity,
-                BillingPostalCode = newAccount.BillingPostalCode,
-                Driving_Directions__c = newAccount.Driving_Directions__c,
-                Parking_Instructions__c = newAccount.Parking_Instructions__c,
-                BillingState = newAccount.BillingState,
-                OwnerId = currentContact.OwnerId);
-        return acc;
     }
 }
